# local_stock_price_database

./: .dockerignore  .gitignore  ASYNC_MIGRATION_SUMMARY.md  BACKTEST_SETUP.md  CACHE_FIX_PROOF.md  CPU_OPTIMIZATION.md  DEPLOYMENT_GUIDE.md  DOCKER_TESTING.md  Dockerfile  Dockerfile.api  Dockerfile.base  Dockerfile.feature  Dockerfile.mlflow  Dockerfile.optimize  Dockerfile.orchestrator  Dockerfile.ray  Dockerfile.simulation  Dockerfile.training  EVOLUTION_ARCHITECTURE.md  FEATURE_CONSISTENCY_GUIDE.md  FEATURE_SELECTION_WORKFLOW.md  MIGRATION_COMPLETE.md  MIGRATION_README.md  MLFLOW_ACCESS.md  MLFLOW_FEATURES_SUMMARY.md  MLFLOW_UI_VISUALIZATION.md  MLFLOW_VISIBILITY_GUIDE.md  MODEL_REGISTRY_GUIDE.md  PROJECT_STRUCTURE.md  PROOF.md  PROOF_CODESPACES_URL.sh  PROOF_OF_CONCEPT.sh  PROOF_WITH_RESTART.sh  QUICK_REFERENCE.md  QUICK_START_TRAINING.md  README-ray-orchestrator.md  README-streaming-features.md  README-training.md  README.md  RETRAIN_WORKFLOW_GUIDE.md  (+111 more)
.github/: context-symbols-implementation-summary.md  context-symbols-usage-guide.md  copilot-instructions.md  data-validation-summary.md  grid_search_app_goal.md  orchestrator-agent-plan.md  ray-data-preprocessing-review.md
app/: config.py  logging.py
feature_service/: config.py  main.py  pipeline.py  requirements.txt  schema.py  web.py
optimization_service/: database.py  main.py  worker.py
orchestrator_service/: README.md  __init__.py  criteria.py  db.py  evolution.py  fingerprint.py  init.sql  main.py  priority_worker.py  requirements.txt
ray_orchestrator/: __init__.py  backtester.py  config.py  data.py  (+11 more)
(+102 files in other folders)
